# robomme

./: .gitignore  README.md  pyproject.toml
configs/experiments/: smolvla_framesamp_spatial_tok64.json  smolvla_memory_layerwise.json  smolvla_tokendrop_layerwise.json
docs/: official_smolvla_code_comparison.md  server_migration.md  smolvla_memory_rebuild.md  token_counts_smolvla_robomme.md  train_results.md
examples/: README.md
examples/bbox_cotrain/: README.md  pyproject.toml  simulation.py  visualize_attention.py  visualize_bbox.py
examples/bbox_cotrain/scripts/: train-bbox_mix-action_a-bbox_a.sh  train-bbox_mix-action_a-bbox_ab.sh  train-bbox_mix-action_a-bbox_none.sh
examples/libero/: README.md  pyproject.toml  simulation.py
examples/libero/scripts/: train-libero-paligemma.sh  train-libero-qwen.sh  train-libero-smolvlm.sh
scripts/: README.md  compute_norm_stats.py  eval_policy.py  launch_smolvla_memory_per_suite.sh  launch_vla_experiment_from_config.py  monitor_smolvla_memory.sh  serve_policy.py  train_policy.py
scripts/generation/: dummy_dataset.py  test_qwen3vl_generation-compare.py  test_qwen3vl_generation.py  test_smolvlm_generation_compare.py
scripts/helpers/: upload_checkpoint.sh
tools/: run_robomme_eval_protocol.py  serve_robomme_policy.py
tools/robomme_eval/: __init__.py  adapter.py  codec.py  config.py  eval_client_template.py  methods.py  protocol.py  server.py  smoke.py
vla_scratch/configs/: __init__.py
vla_scratch/helpers/: data.py  training.py
vla_scratch/policies/: README.md  __init__.py  base.py  config.py
vla_scratch/policies/modules/action_expert/: __init__.py  cross_attention_dit.py
vla_scratch/policies/modules/vlm_bridge/: __init__.py  base.py
vla_scratch/policies/pi/: config.py  policy.py
vla_scratch/policies/utils/: diffusion.py  training.py  transformers.py
vla_scratch/transforms/: README.md  base.py  common.py  data_keys.py  data_types.py  normalization.py
vla_scratch/utils/: checkpoint.py  config.py  dataloader.py  math.py  paths.py
vla_scratch/utils/serving/: zmq_policy_client.py  zmq_policy_server.py
weights/: README.md
(+11 files in other folders)
