[project]
name = "vla-libero-sim"
version = "0.0.0"
description = "LIBERO simulation client for ZMQ policy serving"
requires-python = "==3.10.*"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "mujoco",
    "robosuite==1.4.0",
    "opencv-python",
    "matplotlib",
    "pyzmq",
    "msgpack",
    "imageio",
    "pyyaml",
    "tqdm",
    "termcolor",
    "bddl",
]

[tool.uv]
python-install-mirror = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"